# phone_address_service

./: .env.example  .gitignore  Dockerfile  README.md  Taskfile.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  docker-ci.yml
app/: main.py
app/api/v1/: deps.py  routes_phone_address.py
app/core/: config.py  redis.py
app/schemas/: phone_address.py
app/services/: normalize_phone.py  phone_address_service.py
tests/: conftest.py  test_api_phone_address.py  test_config.py  test_main.py  test_normalize_phone.py  test_service_phone_address.py
