[tool.poetry]
name = "phone-address-service"
version = "0.1.0"
description = "Сервис на FastAPI для хранения связок телефон — адрес с Redis."
authors = ["faiver90@gmail.com"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
fastapi = "0.115.6"
uvicorn = { version = "0.32.1", extras = ["standard"] }
redis = "5.2.1"
pydantic-settings = "2.6.1"
httpx = "^0.28.1"

[tool.poetry.group.dev.dependencies]
mypy = "1.13.0"
ruff = "0.8.2"
pytest = "^8.3.0"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

# -----------------------------
# Настройки mypy
# -----------------------------
[tool.mypy]
python_version = "3.12"
ignore_missing_imports = false
disallow_untyped_defs = true
disallow_untyped_calls = false
warn_return_any = true
warn_unused_configs = true
strict_optional = true
check_untyped_defs = true
no_implicit_optional = true
show_error_codes = true

[[tool.mypy.overrides]]
module = "redis.*"
ignore_missing_imports = true

# -----------------------------
# Настройки ruff
# -----------------------------
[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501", "B008"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D"]
